[build-system]
requires = [
    'setuptools >=75.6',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'nfsn-ddns'
description = 'NearlyFreeSpeech.net Dynamic DNS Utility'
authors = [
    {name = 'James Knight', email = 'git@jdknight.me'},
]
requires-python = '>=3.9'
readme = 'README.md'
license = 'BSD-2-Clause'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Internet :: Name Service (DNS)',
    'Topic :: Utilities',
]
dependencies = [
    'requests>=2.30.0',
    'pyyaml',
]
dynamic = [
    'version',
]

[project.urls]
Download = 'https://pypi.python.org/pypi/nfsn-ddns'
Source = 'https://github.com/jdknight/nfsn-ddns'

[project.scripts]
nfsn-ddns = 'nfsn_ddns.__main__:main'

[tool.setuptools.packages.find]
include = [
    'nfsn-ddns*',
    'nfsn_ddns*',
]
namespaces = false
where = ['.']

[tool.setuptools.dynamic]
version = {attr = 'nfsn_ddns.__version__'}
